--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=SCI-XB-L21-9006\\SQLEXPRESS;Initial Catalog=AccountManagementSystem;user id=sa; password=bashar;Persist Security Info=True;"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Warning"
     }
   },
   "AllowedHosts": "*"
