--- a/Mini Account Management System.csproj
+++ b/Mini Account Management System.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Mini_Account_Management_System</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.4" />
+  </ItemGroup>
+
 </Project>
