--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SCI-XB-L21-9006\\SQLEXPRESS;Initial Catalog=AccountManagementSystem;user id=sa; password=bashar;Persist Security Info=True;"
+    "DefaultConnection": "Data Source=SCI-XB-L21-9006\\SQLEXPRESS;Initial Catalog=AccountManagementSystem;user id=sa; password=bashar;Persist Security Info=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
